fix overflow functions

--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,7 @@
   flex: 1; /* takes 1/3.5 of the screen */
   background-color: beige;
   padding: 1rem;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -139,7 +138,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
+  overflow: auto;
   align-items: center;
   gap: 1rem;
 }
